swag categoryproduct cmplt
